kubernetes/bases/pizza-castle-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-castle-web
  labels:
    app: pizza-castle-web
annotations:
  fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: pizza-castle-web
  replicas: 1
  template:
    metadata:
      labels:
        app: pizza-castle-web
    spec:
      containers:
        - name: web-app
          image: kajendranalagaratnam/pizza-castle-web:main
          ports:
            - containerPort: 3000
