kubernetes/bases/pizza-castle-web/pizza-castle-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-castle-web
  labels:
    app: pizza-castle-web
annotations:
  fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: pizza-castle-web
  replicas: 1
  template:
    metadata:
      labels:
        app: pizza-castle-web
    spec:
      containers:
        - name: web-app
          image: kajendranalagaratnam/pizza-castle-web:main
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-castle-web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    name: pizza-castle-web
