kubernetes/bases/pizza-castle-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pizza-castle-web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: pizza-castle-web
